# desk_tidy_sticky

./: .gitignore  .stignore  LICENSE  README.en.md  README.md  README_EN.md  check_output_3.txt  check_output_final.txt  package-lock.json  package.json  pnpm-lock.yaml  pubspec.yaml
.stfolder/: syncthing-folder-d1ae38.txt
docs/: 2026-01-26-mvp.md  2026-01-27-deps-sync.md  2026-01-27-disable-aero-snap.md  2026-01-27-gitignore-sync.md  2026-01-27-multi-process-overlay.md  2026-01-27-search-archive-overlay.md  2026-01-27-sticker-startup-fix.md  2026-01-27-tray-i18n.md  2026-01-27-ui-style-unify.md  2026-01-27-ui-text-i18n.md  2026-01-27-windows-release-build.md  2026-01-28-trash-and-refinement.md  2026-01-30-architecture-overview.md  2026-01-30-multi-window-api-fix.md  2026-01-30-multi-window-migration.md  2026-01-30-overlay-bottom-distortion.md  2026-01-30-overlay-bottom-float-regression.md  2026-01-30-overlay-clickthrough-layer-block.md  2026-01-30-overlay-drag-refresh.md  2026-01-30-overlay-interaction-stability.md  2026-01-30-overlay-interactive-raise.md  2026-01-30-overlay-mouse-mode-default.md  2026-01-30-overlay-startup-preferences.md  2026-01-30-overlay-window-messaging-fix.md  2026-01-30-overlay-zorder-disappear.md  2026-01-30-tray-menu-auto-close.md  2026-01-30-zorder-toggle-noactivate.md  (+23 more)
src-tauri/: Cargo.toml  build.rs  cargo_check_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  macos_windows.rs  main.rs  note_compat.rs  notes.rs  notes_service.rs  preferences.rs  windows.rs
(+331 files in other folders)
